--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
     - name: Set env
       run: echo "GAME_VERSION=$(date +%Y-%m-%d)" >> $GITHUB_ENV
+    - run: echo ::set-output name=game_version::$GITHUB_ENV
+      id: version
     - uses: actions/checkout@v3
     - run: sudo apt install zip
     - name: Set up Go
@@ -45,8 +47,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./release-$GAME_VERSION.zip
-        asset_name: release-$GAME_VERSION.zip
+        asset_path: ./release-${{ steps.version.outputs.game_version }}.zip
+        asset_name: release-${{ steps.version.outputs.game_version }}.zip
         asset_content_type: application/zip
 
     - uses: eregon/publish-release@v1
