--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Set env
       run: echo "GAME_VERSION=$(date +%Y-%m-%d)" >> $GITHUB_ENV
-    - run: echo ::set-output name=game_version::$GITHUB_ENV
+    - run: echo ::set-output name=game_version::$GAME_VERSION
       id: version
     - uses: actions/checkout@v3
     - run: sudo apt install zip
